--- a/01-Login/package.json
+++ b/01-Login/package.json
@@ -2,6 +2,9 @@
   "name": "centralized-login",
   "version": "0.2.0",
   "private": true,
+  "devDependencies": {
+    "react-scripts": "^2.1.1"
+  },
   "dependencies": {
     "auth0-js": "^9.0.0",
     "bootstrap": "^3.3.7",
@@ -9,8 +12,7 @@
     "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
     "react-router": "^4.1.2",
-    "react-router-dom": "^4.1.2",
-    "react-scripts": "^2.1.1"
+    "react-router-dom": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
