--- a/04-Authorization/package.json
+++ b/04-Authorization/package.json
@@ -2,6 +2,9 @@
   "name": "authorization",
   "version": "0.2.0",
   "private": true,
+  "devDependencies": {
+    "react-scripts": "^2.1.1"
+  },
   "dependencies": {
     "axios": "^0.16.2",
     "cors": "^2.8.3",
@@ -19,8 +22,7 @@
     "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
     "react-router": "^4.1.2",
-    "react-router-dom": "^4.1.2",
-    "react-scripts": "^2.1.1"
+    "react-router-dom": "^4.1.2"
   },
   "scripts": {
     "start": "npm-run-all --parallel server:start client:start",
