--- a/02-Calling-an-API/.dockerignore
+++ b/02-Calling-an-API/.dockerignore
@@ -1,1 +1,20 @@
-.git
+node_modules/
+build/
+exec.*
+npm-debug.log*
+yarn-error.log
+README.md
+
+# testing
+/coverage
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
