[SDK-1192] Remove proxy, separate app and api servers (#186)
* Remove proxy, separate app and api servers

* expose api port for windows

* Make app and api base uris configurable

* yarn upgrade

* Update 02-Calling-an-API/README.md

Co-Authored-By: Steve Hobbs <steve.hobbs@auth0.com>

* Whitespace change to trigger rebuild

Co-authored-by: Steve Hobbs <steve.hobbs@auth0.com>

--- a/02-Calling-an-API/Dockerfile
+++ b/02-Calling-an-API/Dockerfile
@@ -32,9 +32,13 @@ RUN yarn install --production
 COPY --from=build /app/build ./build
 COPY --from=build /app/src/auth_config.json ./src/auth_config.json
 COPY --from=build /app/server.js .
+COPY --from=build /app/api-server.js .
 
 EXPOSE 3000
+EXPOSE 3001
+
 ENV SERVER_PORT=3000
+ENV API_PORT=3001
 ENV NODE_ENV production
 
-CMD ["node", "server.js"]
+CMD ["yarn", "prod"]
